--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
 <title>Nothing</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<body>
-
-
-
+<body style="background-color:black;">
 <center> Hello <br>
-<img src="panda.png" width=30%>  </center>
-
+<img src="panda.png" width=30%> </center>
 </body>
 </html>
