--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body style="background-color:black;">
-<center> Hello <br>
-<img src="panda.png" width=30%> </center>
+<center> <img src="panda.png" width=30%> </center>
 </body>
 </html>
